--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.7"
+        "phpunit/phpunit": "~5.7",
+        "phpmd/phpmd": "^2.6",
+        "squizlabs/php_codesniffer": "^3.0"
     },
     "autoload": {
         "classmap": [
