--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,13 @@
     "require": {
         "php": ">=5.6.4",
         "atayahmet/laravel-nestable": "^0.8.0",
+        "aws/aws-sdk-php": "~3.0",
         "doctrine/dbal": "^2.5",
         "gloudemans/shoppingcart": "^2.3",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "laravelcollective/html": "^5.4.0",
-        "aws/aws-sdk-php": "~3.0"
+        "laravelcollective/html": "^5.4.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
